Add Support Button

--- a/templates/authentication/edit_profile.html
+++ b/templates/authentication/edit_profile.html
@@ -116,6 +116,10 @@
                       <label for="portfolio">Portfolio URL</label>
                       <input type="url" id="portfolio" name="portfolio" class="form-control" value="{{user.social_links.portfolio_url}}">
                     </div>
+                    <div class="col-md-6 form-group">
+                      <label for="coffee">Buy Me A Coffee URL</label>
+                      <input type="url" id="coffee" name="coffee" class="form-control" value="{{user.social_links.buymeacoffee_url}}">
+                    </div>
                     </div>
                     <div class="row">
                         <div class="col-md-4"></div>
