--- a/templates/authentication/profile.html
+++ b/templates/authentication/profile.html
@@ -96,6 +96,9 @@
                         {% if user.social_links.portfolio_url %}
                           <a href="{{user.social_links.portfolio_url}}"><i class="fa fa-globe" aria-hidden="true"></i></a>
                         {% endif %}
+                        {% if user.social_links.buymeacoffee_url %}
+                          <a href="{{user.social_links.buymeacoffee_url}}"><i class="fa fa-coffee" aria-hidden="true"></i></a>
+                        {% endif %}
                       </h1>
                     </div>
                 
