--- a/templates/core/blog-single.html
+++ b/templates/core/blog-single.html
@@ -343,7 +343,28 @@
             <a href="{% url 'login' %}">Login</a>
           </p>
           {% endif %}
-        </div>
+
+          <h3 class="text-center mt-3">OR</h3>
+          <div id="disqus_thread"></div>
+            <script>
+                /**
+                *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
+                *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
+                
+                var disqus_config = function () {
+                this.page.url = "https://iread.ga{{post.get_absolute_url}}";  // Replace PAGE_URL with your page's canonical URL variable
+                this.page.identifier = '{{post.id}}'; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+                };
+                
+                (function() { // DON'T EDIT BELOW THIS LINE
+                var d = document, s = d.createElement('script');
+                s.src = 'https://iread-4.disqus.com/embed.js';
+                s.setAttribute('data-timestamp', +new Date());
+                (d.head || d.body).appendChild(s);
+                })();
+            </script>
+            <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+          </div>
       </div>
 
       {% include "partials/sidebar.html" %} {% if related_posts|length > 0 %}
@@ -407,5 +428,6 @@
 <script src="https://cdn.jsdelivr.net/npm/prismjs@1.23.0/plugins/show-language/prism-show-language.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/prismjs@1.23.0/plugins/copy-to-clipboard/prism-copy-to-clipboard.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/prismjs@1.23.0/plugins/download-button/prism-download-button.js"></script>
+<script id="dsq-count-scr" src="//iread-4.disqus.com/count.js" async></script>
 
 {% endblock js_down %}
