--- a/templates/authentication/profile.html
+++ b/templates/authentication/profile.html
@@ -307,9 +307,9 @@
                     <img src="{{series.thumbnail.url}}" alt="Image placeholder" />
                     <div class="blog-content-body">
                       <div class="post-meta">
-                        <span class="category mb-5">SERIES</span>
                         <span class="mr-2">{{series.date_created|date:"F d Y"}}</span
                         >
+                        <span class="category">SERIES</span>
                       </div>
                       <h2>{{series.name}}</h2>
                     </div>
