--- a/templates/core/contact.html
+++ b/templates/core/contact.html
@@ -38,7 +38,8 @@
                   </div>
                   <div class="row">
                     <div class="col-md-6 form-group">
-                      <input type="submit" id="sendMsg" value="Send Message" class="btn btn-primary" onclick="change()">
+                      <div class="g-recaptcha" data-sitekey="6LdOrVceAAAAAB20nfeAIhtHLb_YQZla5PmjhYgv"></div>
+                      <input type="submit" id="sendMsg" value="Send Message" class="btn btn-primary g-recaptcha" data-sitekey="reCAPTCHA_site_key" data-callback='onSubmit' data-action='submit' onclick="change()">
                     </div>
                   </div>
                 </form>
@@ -137,4 +138,10 @@
     </script>
     
   {% endif %}
+  <script>
+    function onSubmit(token) {
+        document.getElementById("contactForm").submit();
+    }
+
+  </script>
 {% endblock js_down %}
