--- a/templates/core/contact.html
+++ b/templates/core/contact.html
@@ -138,6 +138,7 @@
     </script>
     
   {% endif %}
+  <script src="https://www.google.com/recaptcha/api.js"></script>
   <script>
     function onSubmit(token) {
         document.getElementById("contactForm").submit();
