--- a/templates/core/contact.html
+++ b/templates/core/contact.html
@@ -38,8 +38,8 @@
                   </div>
                   <div class="row">
                     <div class="col-md-6 form-group">
-                      <div class="g-recaptcha" data-sitekey="6LdOrVceAAAAAB20nfeAIhtHLb_YQZla5PmjhYgv"></div>
-                      <input type="submit" id="sendMsg" value="Send Message" class="btn btn-primary g-recaptcha" data-sitekey="reCAPTCHA_site_key" data-callback='onSubmit' data-action='submit' onclick="change()">
+                      <div class="g-recaptcha mb-3" data-sitekey="6LdOrVceAAAAAB20nfeAIhtHLb_YQZla5PmjhYgv"></div>
+                      <input type="submit" id="sendMsg" value="Send Message" class="btn btn-primary g-recaptcha" data-sitekey="6LdOrVceAAAAAB20nfeAIhtHLb_YQZla5PmjhYgv" data-callback='onSubmit' data-action='submit' onclick="change()">
                     </div>
                   </div>
                 </form>
