--- a/templates/core/contact.html
+++ b/templates/core/contact.html
@@ -38,8 +38,7 @@
                   </div>
                   <div class="row">
                     <div class="col-md-6 form-group">
-                      <div class="g-recaptcha mb-3" data-sitekey="6LdOrVceAAAAAB20nfeAIhtHLb_YQZla5PmjhYgv"></div>
-                      <input type="submit" id="sendMsg" value="Send Message" class="btn btn-primary g-recaptcha" data-sitekey="6LdOrVceAAAAAB20nfeAIhtHLb_YQZla5PmjhYgv" data-callback='onSubmit' data-action='submit' onclick="change()">
+                      <input type="submit" id="sendMsg" value="Send Message" class="btn btn-primary" onclick="change()">
                     </div>
                   </div>
                 </form>
@@ -138,11 +137,4 @@
     </script>
     
   {% endif %}
-  <script src="https://www.google.com/recaptcha/api.js"></script>
-  <script>
-    function onSubmit(token) {
-        document.getElementById("contactForm").submit();
-    }
-
-  </script>
 {% endblock js_down %}
