Add Word Count plugin

--- a/templates/core/new-post.html
+++ b/templates/core/new-post.html
@@ -119,7 +119,7 @@
 <script>
     CKEDITOR.replace('editor1', {
       height: 500,
-      extraPlugins: 'filebrowser, codesnippet, markdown',
+      extraPlugins: 'filebrowser, codesnippet, markdown, wordcount',
       filebrowserBrowseUrl: '{% url "ckeditor_browse" %}',
       filebrowserUploadMethod: 'form',
       filebrowserUploadUrl: '{% url "ckeditor_upload" %}'
