--- a/templates/core/search.html
+++ b/templates/core/search.html
@@ -28,24 +28,25 @@
           <div class="col-md-12 col-lg-8 main-content">
             <div class="row mb-5">
 
-              <div class="col-md-12">
+              
                 {% if users %}
                   <div class="separator" style="margin-top: 10px; margin-bottom: 10px;"><h2>Users</h2></div>
                 {% endif %}
                 {% for user in users %}
-                  <div class="post-entry-horzontal">
-                  <a href="{% url 'profile' user.username %}">
-                    <div class="image element-animate" data-animate-effect="fadeIn" style="background-image: url({{user.profile_image.url}}); border-radius: 50%;"></div>
-                    <span class="text">
-                      <h2>{{user.get_full_name}}</h2>
-                      <div class="post-meta">
-                        <span class="mr-2">{{user.username}} </span> &bullet;
-                        <span class="mr-2">{{user.email}}</span>
+                <div class="col-md-6">
+                <div class="container mt-4 mb-4 p-3 d-flex justify-content-center">
+                      <div class="profile-card p-4">
+                          <div class="pf-image d-flex flex-column justify-content-center align-items-center"> <button class="btn btn-secondary"> <img src="{{user.profile_image.url}}" height="100" width="100" /></button> <span class="name mt-3">{{user.get_full_name}}</span> <span class="idd">@{{user.username}}</span>
+                              {% if user.about %}
+                              <div class="text mt-3"> <span>{{user.about}}</span> </div>
+                              {% endif %}
+                              <div class=" d-flex mt-2"> <a href="{% url 'profile' user.username %}"><button class="btn1 btn-dark" >View Profile</button></a> </div>
+                          </div>
                       </div>
-                    </span>
-                  </a>
+                </div>
                 </div>
                 {% endfor %}
+                <div class="col-md-12">
                 {% if results %}
                   <div class="separator" style="margin-top: 10px; margin-bottom: 30px;"><h2>Posts</h2></div>
                 {% endif %}
