--- a/templates/core/important-docs/privacy-policy.html
+++ b/templates/core/important-docs/privacy-policy.html
@@ -9,7 +9,7 @@
     <div class="row blog-entries">
       <div class="col-md-12 col-lg-8 main-content">
         <p>
-          At iRead, accessible from <a href="{% url 'home' %}">https://iread.ga</a>, one of our main priorities
+          At iRead, accessible from <a href="{% url 'home' %}">https://ireadblog.com</a>, one of our main priorities
           is the privacy of our visitors. This Privacy Policy document contains
           types of information that is collected and recorded by iRead and how
           we use it.
