--- a/templates/core/important-docs/refund-policy.html
+++ b/templates/core/important-docs/refund-policy.html
@@ -20,7 +20,7 @@
         </p>
 
         <p>
-            In order to process your refund, reach to us at <a href="mailto:payment@iread.ga">payments@iread.ga </a>
+            In order to process your refund, reach to us at <a href="mailto:payment@ireadblog.com">payments@ireadblog.com </a>
         </p>
       </div>
       {% include "partials/sidebar.html" %}
