--- a/templates/core/important-docs/tnc.html
+++ b/templates/core/important-docs/tnc.html
@@ -13,7 +13,7 @@
         <p>
           These terms and conditions outline the rules and regulations for the
           use of iRead's Website, located at
-          <a href="{% url 'home' %}">https://iread.ga</a>.
+          <a href="{% url 'home' %}">https://ireadblog.com</a>.
         </p>
 
         <p>
