--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -320,7 +320,7 @@
                   <a
                     class="nav-link"
                     id="bulletin"
-                    href="https://digests.iread.ga"
+                    href="https://digests.ireadblog.com"
                     target="_blank"
                     style="cursor: pointer"
                     >Bulletins</a
