--- a/templates/partials/sidebar.html
+++ b/templates/partials/sidebar.html
@@ -115,6 +115,48 @@
   <!-- End Twitter -->
   {% endif %}
 
+  <div class="sidebar-box">
+    <h3 class="heading">Subscribe to our newsletters</h3>
+    <div id="revue-embed">
+      <form
+        action="https://digests.ireadblog.com/add_subscriber"
+        method="post"
+        id="revue-form"
+        name="revue-form"
+        target="_blank"
+      >
+        <div class="revue-form-group form-group">
+          <input
+            class="revue-form-field form-control"
+            placeholder="Your email address..."
+            type="email"
+            name="member[email]"
+            id="member_email"
+            required
+          />
+        </div>
+        <div class="revue-form-actions">
+          <input
+            type="submit"
+            class="btn btn-primary"
+            value="Subscribe"
+            name="member[subscribe]"
+            id="member_submit"
+          />
+        </div>
+        <div class="revue-form-footer mt-3">
+          By subscribing, you agree with Revue’s
+          <a target="_blank" href="https://www.getrevue.co/terms"
+            >Terms of Service</a
+          >
+          and
+          <a target="_blank" href="https://www.getrevue.co/privacy"
+            >Privacy Policy</a
+          >.
+        </div>
+      </form>
+    </div>
+  </div>
 </div>
 <!-- END sidebar -->
 
