Change Twitter Username

--- a/templates/core/base.html
+++ b/templates/core/base.html
@@ -16,7 +16,7 @@
     <meta property="og:description" content="{{post.seo_overview}}" />
     <meta property="og:image" content="{{post.thumbnail.url}}" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@iReadBot" />
+    <meta name="twitter:site" content="@iRead_Blog" />
     <meta name="twitter:title" content="{{post.title}} | iRead" />
     <meta name="twitter:description" content="{{post.seo_overview}}" />
     <meta name="twitter:image" content="{{post.thumbnail.url}}" />
@@ -30,7 +30,7 @@
     <meta property="og:description" content="{{series.desc}}" />
     <meta property="og:image" content="{{series.thumbnail.url}}" />
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@iReadBot" />
+    <meta name="twitter:site" content="@iRead_Blog" />
     <meta name="twitter:title" content="{{series.name}} | iRead" />
     <meta name="twitter:description" content="{{series.desc}}" />
     <meta name="twitter:image" content="{{series.thumbnail.url}}" />
