--- a/templates/core/series.html
+++ b/templates/core/series.html
@@ -10,6 +10,16 @@
         <div class="row mb-4">
           <div class="col-md-6">
             <h2 class="mb-2">{{series.name}}</h2>
+            <div class="post-meta">
+          <span class="author mr-2"
+            >Created by 
+            <a href="{% url 'profile' series.user.username %}"
+              >{{series.user.get_full_name}}</a
+            ></span
+          >&bullet;
+          <span class="mr-2">{{series.date_created|date:"F d Y"}} </span>&bullet;
+          <span class="mr-2">{{series.posts.count}} posts</span>
+        </div>
           </div>
         </div>
         <div class="row blog-entries">
