--- a/templates/core/contact.html
+++ b/templates/core/contact.html
@@ -46,7 +46,7 @@
                   </div>
                 </form>
                 <h4 style="margin-top: 50px;">
-                  Or Contact Us Directly : <a href="mailto:contact@iread.ga">contact@iread.ga</a>
+                  Or Contact Us Directly : <a href="mailto:contact@ireadblog.com">contact@ireadblog.com</a>
                 </h4>
 
           </div>
